created the booking api
